namespace/longhorn-system/longhorn/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-http
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.oglesby.io`)
      kind: Rule
      services:
      - name: longhorn-frontend
        port: 80
      middlewares:
      - name: redirect-https
        namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-https
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.oglesby.io`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
      services:
      - name: longhorn-frontend
        port: 80
  tls: 
    secretName: oglesby-io-tls
